RESOLVED FIXED66191
Fix incorrect objective-c initialize in WebCore
https://bugs.webkit.org/show_bug.cgi?id=66191
Summary Fix incorrect objective-c initialize in WebCore
Sam Weinig
Reported 2011-08-13 11:34:41 PDT
Fix incorrect objective-c initialize in WebCore
Attachments
Patch (1.83 KB, patch)
2011-08-13 11:35 PDT, Sam Weinig
no flags
Patch (1.83 KB, patch)
2011-08-13 11:42 PDT, Sam Weinig
ddkilzer: review+
Sam Weinig
Comment 1 2011-08-13 11:35:40 PDT
mitz
Comment 2 2011-08-13 11:39:09 PDT
Comment on attachment 103863 [details] Patch !
Sam Weinig
Comment 3 2011-08-13 11:40:53 PDT
Eek! I am so ashamed :(
Sam Weinig
Comment 4 2011-08-13 11:42:44 PDT
David Kilzer (:ddkilzer)
Comment 5 2011-08-13 11:45:56 PDT
Comment on attachment 103864 [details] Patch r=me It's more straightforward if you do this anyway: self = [super init]; if (!self) return nil;
Sam Weinig
Comment 6 2011-08-13 11:51:10 PDT
Note You need to log in before you can comment on or make changes to this bug.