Fix incorrect objective-c initialize in WebCore https://bugs.webkit.org/show_bug.cgi?id=66191

Reviewed by David Kilzer.

* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper initWithAccessibilityObject:]):
* rendering/RenderThemeMac.mm:
(-[WebCoreRenderThemeNotificationObserver initWithTheme:WebCore::]):
Correctly initialize by assigning to self and nil checking the result.


Canonical link: https://commits.webkit.org/82042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93021 268f45cc-cd09-0410-ab3c-d52691b4dbfc